<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data/>
    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/fragment_favorite"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:gravity="top"
                android:layout_alignParentTop="true"
                android:background="?android:attr/colorBackground"
                android:elevation="4dp">

                <ImageButton
                    android:id="@+id/button_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_arrow_back"
                    android:contentDescription="@string/contentDescription_button_back"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:text="@string/favorite"/>
            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/lst_colors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/toolbar"
                android:layout_alignParentBottom="true"
                android:padding="5dp"
                android:clipToPadding="false"/>

            <TextView
                android:id="@+id/empty_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/toolbar"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:visibility="gone"
                android:text="@string/no_favorite" />

        </RelativeLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:src="@drawable/ic_add"/>
    </android.support.design.widget.CoordinatorLayout>
</layout>