<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="java.lang.String"/>
        <variable name="color" type="com.vrprod.colorimeter.model.Color"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:gravity="center">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/codeHexadecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:maxLength="7"
                android:text="@{color.codeHexadecimal}"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/codeRgbRed"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/codeRgbRed"
                android:textColorHint="@color/red"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="3"
                    android:textAlignment="center"
                    android:textColor="@color/red"
                    android:text="@{String.valueOf(color.codeRgbRed)}"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/codeRgbGreen"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/codeRgbGreen"
                android:textColorHint="@color/green"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="3"
                    android:textAlignment="center"
                    android:textColor="@color/green"
                    android:text="@{String.valueOf(color.codeRgbGreen)}"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/codeRgbBlue"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/codeRgbBlue"
                android:textColorHint="@color/blue"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="3"
                    android:textAlignment="center"
                    android:textColor="@color/blue"
                    android:text="@{String.valueOf(color.codeRgbBlue)}"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
</layout>